--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 :root {
   --size: 180vw;
-  --offset: 9vw;
+  --offset: 15vw;
   --planet-size: 7.5vw;
+  --offset-half: calc(var(--offset) / 2);
 }
 
 body {
@@ -20,11 +21,13 @@ img {
   box-sizing: border-box;
 
   display: grid;
-  grid-template-areas: "s p";
-  grid-template-columns: 1fr var(--offset);
+  grid-template-areas: "o s p";
+  grid-template-columns: var(--offset-half) 1fr var(--offset-half);
   justify-content: center;
-  grid-area: s;
   align-items: center;
+  justify-self: center;
+  align-self: center;
+  grid-area: s;
 }
 
 .container {
@@ -36,9 +39,6 @@ img {
   align-items: center;
   background-size: cover;
   background-image: url("images/background.png");
-}
-
-#saturn.planets {
 }
 
 .sun {
@@ -58,6 +58,7 @@ img {
 a > img {
   width: 100%;
   height: 100%;
+  /* max-width: 0; */
 }
 
 a {
@@ -73,19 +74,20 @@ a.planetlink {
   width: var(--planet-size);
   height: var(--planet-size);
   position: relative;
-  right: calc(var(--offset) * -1 + var(--planet-size) / 2);
+  left: calc(var(--offset-half) - var(--planet-size) / 2);
 }
 
-#container
-  > div:nth-child(1)
-  > div:nth-child(1)
-  > div:nth-child(1)
-  > a:nth-child(2) {
+#saturnlink {
   max-width: none;
   aspect-ratio: 1.4;
   width: calc(var(--planet-size) * 2.5);
   height: var(--planet-size);
-  right: calc(var(--offset) * -1 + var(--planet-size) * 2.5 / 2);
+  left: calc(var(--offset-half) - var(--planet-size) * 2.5 / 2);
+}
+
+a#neptunelink {
+  position: relative;
+  top: 0px;
 }
 
 a.planetlink:hover {
@@ -93,37 +95,37 @@ a.planetlink:hover {
   z-index: 1;
 }
 
-#neptune.ring {
+#neptunering {
   position: absolute;
   width: var(--size);
   height: var(--size);
   left: calc(var(--size) / 2 * -1);
 }
-#uranus.ring {
+#uranusring {
   width: calc(var(--size) - var(--offset));
   height: calc(var(--size) - var(--offset));
 }
-#saturn.ring {
+#saturnring {
   width: calc(var(--size) - var(--offset) * 2);
   height: calc(var(--size) - var(--offset) * 2);
 }
-#jupiter.ring {
+#jupiterring {
   width: calc(var(--size) - var(--offset) * 3);
   height: calc(var(--size) - var(--offset) * 3);
 }
-#mars.ring {
+#marsring {
   width: calc(var(--size) - var(--offset) * 4);
   height: calc(var(--size) - var(--offset) * 4);
 }
-#earth.ring {
+#earthring {
   width: calc(var(--size) - var(--offset) * 5);
   height: calc(var(--size) - var(--offset) * 5);
 }
-#venus.ring {
+#venusring {
   width: calc(var(--size) - var(--offset) * 6);
   height: calc(var(--size) - var(--offset) * 6);
 }
-#mercury.ring {
+#mercuryring {
   width: calc(var(--size) - var(--offset) * 7);
   height: calc(var(--size) - var(--offset) * 7);
 }
