--- a/style.css
+++ b/style.css
@@ -5,6 +5,13 @@
   --offset-half: calc(var(--offset) / 2);
 }
 
+:export {
+  size: 180;
+  offset: 15;
+  planetSize: 7.5;
+  offsetHalf: calc(var(--offset) / 2);
+}
+
 body {
   margin: 0;
   overflow: hidden;
