--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
-  --size: 180vw;
-  --offset: 15vw;
-  --planet-size: 7vw;
+  --size: 180vmax;
+  --offset: 15vmax;
+  --planet-size: 7vmax;
   --offset-half: calc(var(--offset) / 2);
 }
 
@@ -140,46 +140,24 @@ a.planetlink:hover {
 
 @media (max-width: 550px) {
   :root {
-    --size: 170vh;
+    --size: 180vh;
     --offset: 10vh;
     --planet-size: 7.5vh;
   }
-  #neptune.ring {
-    top: calc(var(--size) / 2 * -1);
-    left: auto;
+  .container {
+    flex-direction: column;
+    align-content: center;
   }
-
+  #neptunering {
+    left: calc(var(--size) * (-1 / 3));
+    top: -90vh;
+  }
   .ring {
-    justify-items: center;
-    left: auto;
     grid-template-areas:
+      "o"
       "s"
       "p";
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 7.5vh;
-  }
-  .container {
-    justify-content: center;
-  }
-
-  .sun {
-    justify-self: center;
-    align-self: end;
-  }
-
-  a.planetlink {
-    width: var(--planet-size);
-    height: var(--planet-size);
-    top: 3.75vh;
-    right: 0vh;
-  }
-  #container
-    > div:nth-child(1)
-    > div:nth-child(1)
-    > div:nth-child(1)
-    > a:nth-child(2) {
-    width: 17.5vh;
-    height: 7.5vh;
-    right: 0vh;
+    grid-template-rows: var(--offset-half) 1fr var(--offset-half);
   }
 }
