--- a/style.css
+++ b/style.css
@@ -94,8 +94,6 @@ a.planetlink {
 }
 
 a#neptunelink {
-  position: relative;
-  top: 0px;
 }
 
 a.planetlink:hover {
@@ -141,7 +139,8 @@ a.planetlink:hover {
 @media (max-width: 550px) {
   :root {
     --size: 180vh;
-    --offset: 10vh;
+    --offset: 15vh;
+    --offset-half: 7.5vh;
     --planet-size: 7.5vh;
   }
   .container {
@@ -149,9 +148,19 @@ a.planetlink:hover {
     align-content: center;
   }
   #neptunering {
+    top: calc(var(--size) * -0.5);
     left: calc(var(--size) * (-1 / 3));
-    top: -90vh;
   }
+  #mercuryring {
+    display: grid;
+    grid-template-areas:
+      "o"
+      "s"
+      "p";
+    grid-template-columns: 1fr;
+    grid-template-rows: 7.5vh auto 7.5vh;
+  }
+
   .ring {
     grid-template-areas:
       "o"
@@ -159,5 +168,22 @@ a.planetlink:hover {
       "p";
     grid-template-columns: 1fr;
     grid-template-rows: var(--offset-half) 1fr var(--offset-half);
+  }
+  .sun {
+    scale: 0.7;
+  }
+  #saturnlink {
+    left: 0;
+  }
+  #mercurylink {
+    /* top: calc(var(--planet-size) * -1.5); */
+  }
+
+  a.planetlink {
+    justify-self: center;
+    position: relative;
+    left: 0;
+    right: 0;
+    /* top: calc(var(--planet-size) * 0.5); */
   }
 }
