--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
   margin: 0;
   overflow: hidden;
   background-size: cover;
-  background-image: url("/images/background.png");
+  background-image: url("background.png");
 }
 
 img {
