--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ a.planetlink {
   left: calc(var(--offset-half) - var(--planet-size) / 2);
 }
 
-#saturnlink {
+#saturnuslink {
   max-width: none;
   aspect-ratio: 1.4;
   width: calc(var(--planet-size) * 2.5);
@@ -92,7 +92,7 @@ a.planetlink:hover {
   z-index: 1;
 }
 
-#neptunering {
+#neptunusring {
   position: absolute;
   width: var(--size);
   height: var(--size);
@@ -102,7 +102,7 @@ a.planetlink:hover {
   width: calc(var(--size) - var(--offset));
   height: calc(var(--size) - var(--offset));
 }
-#saturnring {
+#saturnusring {
   width: calc(var(--size) - var(--offset) * 2);
   height: calc(var(--size) - var(--offset) * 2);
 }
@@ -114,7 +114,7 @@ a.planetlink:hover {
   width: calc(var(--size) - var(--offset) * 4);
   height: calc(var(--size) - var(--offset) * 4);
 }
-#earthring {
+#jordenring {
   width: calc(var(--size) - var(--offset) * 5);
   height: calc(var(--size) - var(--offset) * 5);
 }
@@ -122,7 +122,7 @@ a.planetlink:hover {
   width: calc(var(--size) - var(--offset) * 6);
   height: calc(var(--size) - var(--offset) * 6);
 }
-#mercuryring {
+#merkuriusring {
   width: calc(var(--size) - var(--offset) * 7);
   height: calc(var(--size) - var(--offset) * 7);
 }
@@ -138,7 +138,7 @@ a.planetlink:hover {
     flex-direction: column;
     align-items: center;
   }
-  #neptunering {
+  #neptunusring {
     top: calc(var(--size) * -0.5);
     left: 50%;
     transform: translateX(-50%);
@@ -156,10 +156,10 @@ a.planetlink:hover {
   .sun {
     scale: 0.7;
   }
-  #saturnlink {
+  #saturnuslink {
     left: 0;
   }
-  #mercurylink {
+  #merkuriuslink {
     top: calc(var(--planet-size) * -1.5);
   }
 
