--- a/css/planetstyle.css
+++ b/css/planetstyle.css
@@ -12,11 +12,36 @@ body {
     "side content"
     "footer footer";
   grid-template-rows: 10vh 80vh 10vh;
-  grid-template-columns: 2fr 4fr;
+  grid-template-columns: 1fr 2fr;
 }
 
 a {
   color: #000;
+}
+
+.sidebar {
+  grid-area: side;
+  display: grid;
+  grid-template-rows: repeat(4, 25%);
+  grid-template-columns: repeat(2, 50%);
+}
+.planetlink {
+  width: calc(1 / 6vw);
+  max-height: 20vh;
+  height: auto;
+  align-self: center;
+  justify-self: center;
+}
+
+.planetlink img {
+  width: 100%;
+  height: 100%;
+  max-height: 18vh;
+}
+
+.planetlink:hover {
+  transform: rotate(20deg) scale(1.2);
+  transition: 0.3s;
 }
 
 aside {
@@ -30,9 +55,10 @@ aside {
 .header {
   grid-area: header;
   display: grid;
-  grid-template-columns: 1fr 2fr;
-  background-color: #b0b;
+  grid-template-columns: 5fr 7fr;
+  background-color: rgb(0, 119, 255);
   text-align: center;
+  align-items: center;
 }
 
 .planet {
@@ -49,24 +75,63 @@ aside {
   border-radius: 10px;
   align-self: end;
   grid-area: t;
+  display: grid;
+  align-content: center;
+  justify-content: center;
 }
 
-.text::before {
+/* .text::before {
   content: "";
   display: block;
   position: relative;
-  /* z-index: -999; */
-  top: calc(100% - 30px);
-  left: -30px;
-  /* background-color: #b0b; */
+  z-index: -999;
+  top: calc(100% - 3vmax);
+  left: -3vmax;
+  background-color: #b0b;
   transform: rotate(45deg);
   height: 0px;
   width: 0px;
 
-  border-top: 60px rgb(0, 119, 255) solid;
-  border-right: 30px solid transparent;
-  border-left: 30px solid transparent;
+  border-top: 6vmax rgb(0, 119, 255) solid;
+  border-right: 3vmax solid transparent;
+  border-left: 3vmax solid transparent;
+} */
+
+ul {
+  list-style: none;
+  margin: 20px;
+  padding: 0;
 }
+
+li {
+  font-size: 2rem;
+}
+
+li::before {
+  content: "";
+  display: inline-block;
+  height: 25px;
+  width: 25px;
+  background-size: contain;
+  margin-right: 5px;
+}
+
+/* .text::after {
+  content: "";
+  display: block;
+  position: relative;
+  z-index: -999;
+  top: calc(100% - (19.75vmax));
+  left: -2.6vmax;
+  background-color: #b0b;
+  transform: rotate(45deg);
+  height: 0px;
+  width: 0px;
+
+  border-top: calc(6vmax - 8px) #fff solid;
+  border-right: calc(3vmax - 4px) solid transparent;
+  border-left: calc(3vmax - 4px) solid transparent;
+} */
 
 .container {
   grid-area: content;
@@ -79,7 +144,7 @@ aside {
 .footer {
   grid-area: footer;
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 5fr 7fr;
   text-align: center;
   font-size: 1.5rem;
 }
@@ -91,4 +156,39 @@ aside {
 
 * {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+h1 {
+  margin: 0;
+}
+
+@media screen and (max-width: 530px) {
+  .footer {
+    font-size: 0.75rem;
+  }
+}
+
+@media screen and (max-width: 385px) {
+  h1 {
+    font-size: 1.25rem;
+  }
+}
+
+@media screen and (max-height: 635px) {
+  .footer {
+    grid-template-columns: 1fr;
+    font-size: 1rem;
+  }
+  h1 {
+    font-size: 1.25rem;
+  }
+  li {
+    font-size: 1rem;
+  }
+}
+
+@media screen and (max-height: 420px) {
+  .footer {
+    font-size: 0.7rem;
+  }
 }
