--- a/css/planetstyle.css
+++ b/css/planetstyle.css
@@ -36,7 +36,7 @@ a {
 .planetlink img {
   width: 100%;
   height: 100%;
-  max-height: 18vh;
+  max-height: 18vmin;
 }
 
 .planetlink:hover {
@@ -62,40 +62,31 @@ aside {
 }
 
 .planet {
-  width: 15vmax;
-  grid-area: p;
+  width: 15vw;
+  height: 15vw;
+  align-self: flex-end;
+}
+
+.saturnus {
+  height: 15vw;
+  width: calc(15vw * 2.3);
 }
 
 .text {
-  width: 90%;
-  height: 80%;
+  width: calc(100% - 15vw);
+  height: calc(90% - 15vw);
   background-color: #fff;
   border: rgb(0, 119, 255) 3px solid;
   box-sizing: border-box;
   border-radius: 10px;
-  align-self: end;
-  grid-area: t;
   display: grid;
   align-content: center;
   justify-content: center;
+  position: absolute;
+  right: 0px;
+  bottom: 15vw;
+  margin-right: 2vw;
 }
-
-/* .text::before {
-  content: "";
-  display: block;
-  position: relative;
-  z-index: -999;
-  top: calc(100% - 3vmax);
-  left: -3vmax;
-  background-color: #b0b;
-  transform: rotate(45deg);
-  height: 0px;
-  width: 0px;
-
-  border-top: 6vmax rgb(0, 119, 255) solid;
-  border-right: 3vmax solid transparent;
-  border-left: 3vmax solid transparent;
-} */
 
 ul {
   list-style: none;
@@ -134,11 +125,13 @@ li::before {
 } */
 
 .container {
+  /* grid-area: content; */
+  /* grid-template-areas: "e t" "p e2"; */
+  display: flex;
   grid-area: content;
-  grid-template-areas: "e t" "p e2";
-  display: grid;
-  grid-template-rows: auto 15vmax;
-  grid-template-columns: 15vmax auto;
+  /* grid-template-rows: auto 15vw; */
+  /* grid-template-columns: 15vw auto; */
+  position: relative;
 }
 
 .footer {
@@ -165,6 +158,36 @@ h1 {
 @media screen and (max-width: 530px) {
   .footer {
     font-size: 0.75rem;
+    grid-template-columns: 1fr 1fr;
+  }
+  img.saturnus {
+    height: 10vh;
+    width: calc(10vh * 2.3);
+  }
+  li {
+    font-size: 1.25rem;
+  }
+  .wrapper {
+    grid-template-areas:
+      "header header"
+      "side side"
+      "content content"
+      "footer footer";
+    grid-template-rows: 1fr 2fr 8fr 1fr;
+    grid-template-columns: 1fr 1fr;
+  }
+  .planet {
+    width: 10vh;
+    height: 10vh;
+  }
+  .text {
+    width: calc(100% - 10vh);
+    height: calc(90% - 10vh);
+    bottom: 10vh;
+  }
+  .sidebar {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(1, 2fr);
   }
 }
 
