--- a/css/planetstyle.css
+++ b/css/planetstyle.css
@@ -45,18 +45,18 @@ a {
 }
 
 aside {
-  background-color: tomato;
+  background-color: #00dfa2;
 }
 
 .footer {
-  background-color: salmon;
+  background-color: #ff0060;
 }
 
 .header {
   grid-area: header;
   display: grid;
   grid-template-columns: 5fr 7fr;
-  background-color: rgb(0, 119, 255);
+  background-color: #0079ff;
   text-align: center;
   align-items: center;
 }
@@ -76,7 +76,7 @@ aside {
   width: calc(100% - 15vw);
   height: calc(90% - 15vw);
   background-color: #fff;
-  border: rgb(0, 119, 255) 3px solid;
+  border: #0079ff 3px solid;
   box-sizing: border-box;
   border-radius: 10px;
   display: grid;
