--- a/css/planetstyle.css
+++ b/css/planetstyle.css
@@ -12,7 +12,7 @@ body {
     "side content"
     "footer footer";
   grid-template-rows: 10vh 80vh 10vh;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1fr 3fr;
 }
 
 a {
@@ -36,7 +36,7 @@ a {
 .planetlink img {
   width: 100%;
   height: 100%;
-  max-height: 18vmin;
+  max-height: 12.5vmin;
 }
 
 .planetlink:hover {
@@ -45,7 +45,7 @@ a {
 }
 
 aside {
-  background-color: #00dfa2;
+  /* background-color: #00dfa2; */
 }
 
 .footer {
@@ -65,6 +65,7 @@ aside {
   width: 15vw;
   height: 15vw;
   align-self: flex-end;
+  margin-bottom: 10px;
 }
 
 .saturnus {
@@ -74,7 +75,7 @@ aside {
 
 .text {
   width: calc(100% - 15vw);
-  height: calc(90% - 15vw);
+  height: calc(100% - 15vw - 10px);
   background-color: #fff;
   border: #0079ff 3px solid;
   box-sizing: border-box;
@@ -84,7 +85,8 @@ aside {
   justify-content: center;
   position: absolute;
   right: 0px;
-  bottom: 15vw;
+  top: 0px;
+  margin-top: 2vw;
   margin-right: 2vw;
 }
 
@@ -95,7 +97,8 @@ ul {
 }
 
 li {
-  font-size: 2rem;
+  font-size: 2.25rem;
+  margin-bottom: 10px;
 }
 
 li::before {
@@ -149,6 +152,7 @@ li::before {
 
 * {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  box-sizing: border-box;
 }
 
 h1 {
@@ -157,7 +161,7 @@ h1 {
 
 @media screen and (max-width: 530px) {
   .footer {
-    font-size: 0.75rem;
+    font-size: 1.5rem;
     grid-template-columns: 1fr 1fr;
   }
   img.saturnus {
@@ -165,7 +169,7 @@ h1 {
     width: calc(10vh * 2.3);
   }
   li {
-    font-size: 1.25rem;
+    font-size: 2.25rem;
   }
   .wrapper {
     grid-template-areas:
@@ -176,42 +180,32 @@ h1 {
     grid-template-rows: 1fr 2fr 8fr 1fr;
     grid-template-columns: 1fr 1fr;
   }
-  .planet {
-    width: 10vh;
-    height: 10vh;
-  }
   .text {
-    width: calc(100% - 10vh);
-    height: calc(90% - 10vh);
-    bottom: 10vh;
+    width: calc(100% - 15vw - 10px);
+    height: calc(100% - 15vw - 10px);
+    bottom: 15vw;
+    margin-top: 10px;
+    margin-bottom: 15vw;
   }
   .sidebar {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(1, 2fr);
+    padding-top: 10px;
   }
 }
 
-@media screen and (max-width: 385px) {
-  h1 {
-    font-size: 1.25rem;
-  }
-}
-
-@media screen and (max-height: 635px) {
-  .footer {
-    grid-template-columns: 1fr;
-    font-size: 1rem;
-  }
-  h1 {
-    font-size: 1.25rem;
-  }
+@media screen and (max-width: 300px) and (max-height: 300px) {
   li {
+    font-size: 0.75rem;
+  }
+  li::before {
+    width: 15px;
+    height: 15px;
+  }
+  h1 {
     font-size: 1rem;
   }
-}
-
-@media screen and (max-height: 420px) {
   .footer {
-    font-size: 0.7rem;
+    font-size: 0.75rem;
   }
 }
