--- a/css/planetstyle.css
+++ b/css/planetstyle.css
@@ -1,3 +1,8 @@
+* {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   background-image: url("../images/background.png");
@@ -26,7 +31,6 @@ a {
   grid-template-columns: repeat(2, 50%);
 }
 .planetlink {
-  width: calc(1 / 6vw);
   max-height: 20vh;
   height: auto;
   align-self: center;
@@ -42,10 +46,6 @@ a {
 .planetlink:hover {
   transform: rotate(20deg) scale(1.2);
   transition: 0.3s;
-}
-
-aside {
-  /* background-color: #00dfa2; */
 }
 
 .footer {
@@ -65,7 +65,8 @@ aside {
   width: 15vw;
   height: 15vw;
   align-self: flex-end;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
+  margin-left: 5px;
 }
 
 .saturnus {
@@ -97,8 +98,8 @@ ul {
 }
 
 li {
-  font-size: 2.25rem;
   margin-bottom: 10px;
+  font-size: 2.5vmax;
 }
 
 li::before {
@@ -110,30 +111,9 @@ li::before {
   margin-right: 5px;
 }
 
-/* .text::after {
-  content: "";
-  display: block;
-  position: relative;
-  z-index: -999;
-  top: calc(100% - (19.75vmax));
-  left: -2.6vmax;
-  background-color: #b0b;
-  transform: rotate(45deg);
-  height: 0px;
-  width: 0px;
-
-  border-top: calc(6vmax - 8px) #fff solid;
-  border-right: calc(3vmax - 4px) solid transparent;
-  border-left: calc(3vmax - 4px) solid transparent;
-} */
-
 .container {
-  /* grid-area: content; */
-  /* grid-template-areas: "e t" "p e2"; */
   display: flex;
   grid-area: content;
-  /* grid-template-rows: auto 15vw; */
-  /* grid-template-columns: 15vw auto; */
   position: relative;
 }
 
@@ -150,11 +130,6 @@ li::before {
   align-self: center;
 }
 
-* {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  box-sizing: border-box;
-}
-
 h1 {
   margin: 0;
 }
@@ -167,9 +142,6 @@ h1 {
   img.saturnus {
     height: 10vh;
     width: calc(10vh * 2.3);
-  }
-  li {
-    font-size: 2.25rem;
   }
   .wrapper {
     grid-template-areas:
@@ -195,9 +167,6 @@ h1 {
 }
 
 @media screen and (max-width: 300px) and (max-height: 300px) {
-  li {
-    font-size: 0.75rem;
-  }
   li::before {
     width: 15px;
     height: 15px;
@@ -205,6 +174,38 @@ h1 {
   h1 {
     font-size: 1rem;
   }
+  .footer {
+    font-size: 0.75rem;
+  }
+}
+
+@media screen and (max-width: 415px) {
+  .footer {
+    font-size: 1rem;
+  }
+}
+@media screen and (max-width: 305px) {
+  h1 {
+    font-size: 1.75rem;
+  }
+}
+
+@media screen and (max-height: 435px) {
+  .text {
+    width: calc(100% - 19vw);
+    height: calc(100% - 4vw);
+  }
+  h1 {
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (max-height: 630px) {
+  .footer {
+    font-size: 1rem;
+  }
+}
+@media screen and (max-height: 410px) {
   .footer {
     font-size: 0.75rem;
   }
