--- a/css/planetstyle.css
+++ b/css/planetstyle.css
@@ -5,7 +5,7 @@
 
 body {
   margin: 0;
-  background-image: url("../images/background.png");
+  background-image: url("../images/background.wepb");
   background-size: cover;
 }
 
